<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SMS Backup+</string>
    <string name="app_description">
        Use Gmail to back up your SMS. This is an improved version of the application "SMS Backup" by
        Christoph Studer which supports restoring SMS back to the phone. It is
        fully backwards compatible with SMS Backup.
    </string>
    <string name="ui_sync_button_label_idle">Backup</string>
    <string name="ui_sync_button_label_canceling">Stopping</string>
    <string name="ui_sync_button_label_syncing">Stop</string>
    <string name="ui_restore_button_label_idle">Restore</string>
    <string name="ui_restore_button_label_restoring">Stop</string>
    <string name="status_idle">Idle</string>
    <string name="status_idle_details">Last item backed up:
        <xliff:g id="last_backup_date">%1$s</xliff:g>
    </string>
    <string name="status_idle_details_never">never</string>
    <string name="status_working">Working</string>
    <string name="status_backup">Backing up</string>
    <string name="status_restore">Restoring</string>
    <string name="status_backup_details">Backed up<xliff:g id="backed_up_items">%1$d</xliff:g>/
        <xliff:g id="total_items">%2$d</xliff:g>
        items\u2026
    </string>
    <string name="status_restore_details">Restored<xliff:g id="backed_up_items">%1$d</xliff:g>/
        <xliff:g id="total_items">%2$d</xliff:g>
        items\u2026
    </string>
    <string name="status_login_details">Logging in\u2026</string>
    <string name="status_updating_threads">Updating threads\u2026</string>
    <string name="status_done">Done</string>
    <string name="status_backup_done_details_max_per_sync">Maximum of %1$d items per backup reached. Restart backup to
        continue.
    </string>
    <string name="status_backup_done_details_noitems">There were no items to backup.</string>
    <plurals name="status_backup_done_details">
        <item quantity="one">Successfully backed up
            <xliff:g id="total_items">%1$d</xliff:g>
            item.
        </item>
        <item quantity="other">Successfully backed up
            <xliff:g id="total_items">%1$d</xliff:g>
            items.
        </item>
    </plurals>
    <plurals name="status_restore_done_details">
        <item quantity="one">Successfully restored
            <xliff:g id="total_items">%1$d</xliff:g>
            item (%2$d dups).
        </item>
        <item quantity="other">Successfully restored
            <xliff:g id="total_items">%1$d</xliff:g>
            items (%2$d dups).
        </item>
    </plurals>
    <string name="status_restore_canceled_details">%1$d/%2$d items successfully restored.</string>
    <string name="status_unknown_error">Error</string>
    <string name="notification_general_error">SMSBackup+ error</string>
    <string name="status_unknown_error_details">Error during backup/restore:\n
        <xliff:g id="error_description">%1$s</xliff:g>
    </string>
    <string name="status_auth_failure">Login error</string>
    <string name="notification_auth_failure">SMSBackup+ login error</string>
    <string name="status_auth_failure_details_xoauth">XOAuth authorization error. Please make sure you enabled IMAP in
        your Gmail account settings.
    </string>
    <string name="status_auth_failure_details_plain">IMAP authorization error.
        Make sure login and password are set correctly.
    </string>
    <string name="status_calc_details">Calculating\u2026</string>
    <string name="status_canceled">Canceled</string>
    <string name="status_canceled_details">%1$d/%2$d items successfully backed up.</string>
    <string name="status_gmail_temp_error">Temporary Gmail IMAP error, try again later.</string>
    <string name="ui_settings_advanced_label">Advanced settings</string>
    <string name="ui_settings_advanced_desc">Set advanced preferences.</string>
    <string name="ui_settings_advanced_server_label">IMAP server settings</string>
    <string name="ui_settings_advanced_server_desc">Do not change unless you know what you are doing!</string>
    <string name="imap_settings">IMAP settings</string>
    <string name="ui_login_label">Username</string>
    <string name="ui_login_desc">Your IMAP account/e-mail address.</string>
    <string name="ui_login_dialog_msg">WARNING: Changing the username might break things when using XOAuth.</string>
    <string name="ui_password_label">Password</string>
    <string name="ui_password_desc">Your IMAP account password. Only used when XOAuth is disabled.</string>
    <string name="ui_password_dialog_msg">The password is stored on this device and is only used to login.</string>
    <string name="ui_server_label">Server address</string>
    <string name="ui_server_desc">The address of the server you wish to sync to incl. its port.</string>
    <string name="ui_server_dialog_msg">Default for gmail is \"imap.gmail.com:993\"</string>
    <string name="ui_protocol_label">Security</string>
    <string name="ui_protocol_desc">The security protocol of the server. Default for gmail is \"SSL (Required)\"."
    </string>
    <string name="ui_authentication_label">Authentication</string>
    <string name="ui_authentication_desc">The authentication method. Default for gmail is \"XOAuth\".</string>
    <string name="plain">Plain text</string>
    <string name="xoauth">XOAuth</string>
    <string name="ui_imap_folder_label">Gmail label</string>
    <string name="ui_imap_folder_desc">Gmail label assigned to SMS.</string>
    <string name="ui_imap_folder_label_dialog_msg">Backed up SMS messages will be tagged with this label in Gmail.
    </string>
    <string name="ui_mail_subject_prefix_label">Email subject prefix</string>
    <string name="ui_mail_subject_prefix_desc">Use IMAP folder name as prefix in email subject</string>
    <string name="ui_max_items_per_sync_label">Items per backup</string>
    <string name="ui_max_items_per_sync_desc">Maximum number of items per backup.</string>
    <string name="ui_max_items_per_restore_label">Items per restore</string>
    <string name="ui_max_items_per_restore_desc">Maximum number of restored messages.</string>
    <string name="ui_restore_starred_only_label">Starred items</string>
    <string name="ui_restore_starred_only_desc">Only restore starred items.</string>
    <string name="ui_backup_mms_label">Backup MMS</string>
    <string name="ui_backup_mms_desc">Enable MMS backup</string>
    <string name="ui_backup_mms_not_supported">MMS backup not supported on this platform.</string>
    <string name="ui_backup_calllog_label">Backup Call log</string>
    <string name="ui_backup_calllog_desc">Enable Call log backup</string>
    <string name="ui_backup_whatsapp_label">Backup WhatsApp</string>
    <string name="ui_backup_whatsapp_desc">Enable WhatsApp backup</string>
    <string name="ui_backup_calllog_sync_calendar_enabled_label">Calendar sync</string>
    <string name="ui_backup_calllog_sync_calendar_enabled_desc">Add call log entries to calendar</string>
    <string name="ui_backup_calllog_types_label">Call types</string>
    <string name="ui_backup_calllog_types_desc">Which call types to back up</string>
    <string name="ui_backup_calllog_sync_calendar_label">None</string>
    <string name="ui_backup_calllog_sync_calendar_desc">Calendar used for call logs</string>
    <string name="ui_imap_folder_calllog_label">Call log label</string>
    <string name="ui_imap_folder_calllog_desc">Gmail label assigned to call log.</string>
    <string name="ui_imap_folder_calllog_label_dialog_msg">Backed up call log entries will be tagged with this label in
        Gmail.
    </string>
    <string name="ui_imap_folder_whatsapp_label">WhatsApp label</string>
    <string name="ui_imap_folder_whatsapp_desc">Gmail label assigned to WhatsApp.</string>
    <string name="ui_imap_folder_whatsapp_label_dialog_msg">Backed up WhatsApp messages will be tagged with this label
        in Gmail.
    </string>
    <string name="ui_mark_as_read_label">Mark as read (emails)</string>
    <string name="ui_mark_as_read_desc">Whether to mark messages in Gmail as read or not.</string>
    <string name="ui_mark_as_read_restore_label">Mark as read (SMS)</string>
    <string name="ui_mark_as_read_restore_desc">Whether to mark all restored SMS as read or not.</string>
    <string name="ui_email_address_style_label">Email address style</string>
    <string name="ui_email_address_style_desc">Format of email addresses</string>
    <string name="ui_enable_auto_sync_label">Auto backup</string>
    <string name="ui_enable_auto_sync_desc">Whether to automatically backup new SMS or not.</string>
    <string name="ui_enable_auto_sync_summary">Automatically backup %1$s.</string>
    <string name="ui_enable_auto_sync_no_enabled_summary">No item type to backup selected.</string>
    <string name="sd_card_disclaimer">Auto backup might not work reliably when app is installed on SD card.</string>
    <string name="ui_enable_auto_sync_bg_data">You will also need to enable background data.</string>
    <string name="ui_auto_backup_schedule_label">Regular schedule</string>
    <string name="ui_auto_backup_schedule_desc">When to backup SMS</string>
    <string name="ui_auto_backup_incoming_schedule_label">Incoming schedule</string>
    <string name="ui_auto_backup_incoming_schedule_desc">When to backup incoming SMS (after arrival)</string>
    <string name="ui_wifi_only_label">Require Wifi</string>
    <string name="ui_wifi_only_desc">Only backup when connected to Wifi</string>
    <string name="ui_notifications_label">Notifications</string>
    <string name="ui_notifications_desc">Background notifications</string>
    <string name="error_wifi_only_no_connection">No Wifi connection</string>
    <string name="error_no_connection">No internet connection</string>
    <string name="ui_dialog_missing_credentials_title">Login information</string>
    <string name="ui_connected_label">Connect</string>
    <string name="ui_connected_desc">Your account needs to be connected.</string>
    <string name="ui_backup_contact_group_label">Contacts to backup</string>
    <string name="ui_backup_contact_group_desc">Only backup items from a specific group</string>
    <string name="ui_third_party_integration_label">3rd party integration</string>
    <string name="ui_third_party_integration_desc">Allow other apps to trigger backups via broadcast intents</string>
    <string name="ui_backup_settings_label">Backup settings</string>
    <string name="ui_backup_calllog_settings_label">Call log settings</string>
    <string name="ui_auto_backup_settings_label">@string/auto_backup_settings</string>
    <string name="ui_restore_settings_label">Restore settings</string>
    <string name="ui_backup_sms_label">Backup SMS</string>
    <string name="ui_backup_sms_desc">Enable SMS backup</string>
    <string name="ui_restore_sms_label">Restore SMS</string>
    <string name="ui_restore_sms_desc"/>
    <string name="ui_restore_mms_label">Restore MMS</string>
    <string name="ui_restore_mms_desc">@string/ui_feature_not_available_yet</string>
    <string name="ui_restore_calllog_label">Restore call log</string>
    <string name="ui_restore_calllog_desc"/>
    <string name="pref_app_log">Sync log</string>
    <string name="pref_app_log_enabled">Log is stored on SD card as \"sms_backup_plus.log\".</string>
    <string name="pref_app_log_disabled">@string/pref_acra_disabled</string>
    <string name="pref_app_log_debug">Debug mode</string>
    <string name="pref_app_log_debug_summary">Enables extra debug logging in sync log</string>
    <string name="ui_confirm_action_label">Confirm actions</string>
    <string name="ui_confirm_action_desc">Ask before performing backup or restore</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Using secure Google Play Store in-app payment.</string>
</resources>