<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="first_preferencescreen">
  <PreferenceCategory android:title="@string/ui_settings_label" android:order="1">

    <CheckBoxPreference android:key="connected"
      android:title="@string/ui_connected_label"
      android:summary="@string/ui_connected_desc"
      android:persistent="true"
      android:defaultValue="false"/>

    <CheckBoxPreference android:key="enable_auto_sync"
      android:title="@string/ui_enable_auto_sync_label"
      android:summary="@string/ui_enable_auto_sync_desc"
      android:persistent="true"
      android:defaultValue="false"/>

    <PreferenceScreen
      android:title="@string/ui_settings_advanced_label"
      android:summary="@string/ui_settings_advanced_desc">
      <PreferenceCategory>
        <CheckBoxPreference android:key="mark_as_read"
          android:title="@string/ui_mark_as_read_label"
          android:summary="@string/ui_mark_as_read_desc"
          android:persistent="true"
          android:defaultValue="true"/>

        <CheckBoxPreference android:key="mark_as_read_on_restore"
          android:title="@string/ui_mark_as_read_restore_label"
          android:summary="@string/ui_mark_as_read_restore_desc"
          android:persistent="true"
          android:defaultValue="true"/>

        <EditTextPreference android:key="imap_folder"
          android:title="@string/ui_imap_folder_label"
          android:summary="@string/ui_imap_folder_desc"
          android:singleLine="true"
          android:dialogMessage="@string/ui_imap_folder_label_dialog_msg"
          android:persistent="true"
          android:defaultValue="SMS"/>

        <ListPreference android:key="max_items_per_sync"
          android:title="@string/ui_max_items_per_sync_label"
          android:summary="@string/ui_max_items_per_sync_desc"
          android:entries="@array/max_items_per_sync_entries"
          android:entryValues="@array/max_items_per_sync_values"
          android:defaultValue="-1"
          android:persistent="true"/>

        <ListPreference android:key="max_items_per_restore"
          android:title="@string/ui_max_items_per_restore_label"
          android:summary="@string/ui_max_items_per_restore_desc"
          android:entries="@array/max_items_per_restore_entries"
          android:entryValues="@array/max_items_per_restore_values"
          android:defaultValue="-1"
          android:persistent="true"/>

      <CheckBoxPreference android:key="wifi_only"
          android:title="@string/ui_wifi_only_label"
          android:summary="@string/ui_wifi_only_desc"
          android:persistent="true"
          android:defaultValue="false"/>

      <ListPreference android:key="auto_backup_schedule"
        android:title="@string/ui_auto_backup_schedule_label"
        android:summary="@string/ui_auto_backup_schedule_desc"
        android:entries="@array/auto_backup_schedule_entries"
        android:entryValues="@array/auto_backup_schedule_values"
        android:defaultValue="7200"
        android:persistent="true"/>

      <ListPreference android:key="auto_backup_incoming_schedule"
        android:title="@string/ui_auto_backup_incoming_schedule_label"
        android:summary="@string/ui_auto_backup_incoming_schedule_desc"
        android:entries="@array/auto_backup_incoming_schedule_entries"
        android:entryValues="@array/auto_backup_incoming_schedule_values"
        android:defaultValue="180"
        android:persistent="true"/>

        <PreferenceScreen
          android:title="@string/ui_settings_advanced_server_label"
          android:summary="@string/ui_settings_advanced_server_desc">
          <PreferenceCategory>

            <EditTextPreference android:key="server_address"
              android:title="@string/ui_server_label"
              android:summary="@string/ui_server_desc"
              android:singleLine="true"
              android:dialogMessage="@string/ui_server_dialog_msg"
              android:defaultValue="imap.gmail.com:993"
              android:persistent="true"/>

            <ListPreference android:key="server_protocol"
              android:title="@string/ui_protocol_label"
              android:summary="@string/ui_protocol_desc"
              android:entries="@array/server_protocol_entries"
              android:entryValues="@array/server_protocol_entryValues"
              android:defaultValue="+ssl+"
              android:persistent="true"/>

            <ListPreference android:key="server_authentication"
              android:title="@string/ui_authentication_label"
              android:summary="@string/ui_authentication_desc"
              android:entries="@array/server_authentication_entries"
              android:entryValues="@array/server_authentication_values"
              android:defaultValue="xoauth"
              android:persistent="true"/>

            <EditTextPreference android:key="login_user"
              android:title="@string/ui_login_label"
              android:summary="@string/ui_login_desc"
              android:singleLine="true"
              android:dialogMessage="@string/ui_login_dialog_msg"
              android:persistent="true"/>

            <EditTextPreference android:key="login_password"
              android:title="@string/ui_password_label"
              android:summary="@string/ui_password_desc"
              android:singleLine="true"
              android:password="true"
              android:dialogMessage="@string/ui_password_dialog_msg"
              android:persistent="true"/>
          </PreferenceCategory>
        </PreferenceScreen>
      </PreferenceCategory>
    </PreferenceScreen>
  </PreferenceCategory>
</PreferenceScreen>
